// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TitleBar /> Snapshot should match snapshot 1`] = `
.c0 {
  height: 18px;
  margin-bottom: 2px;
  padding: 2px 2px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #000e7a;
  color: #fefefe;
}

.c0 img {
  width: 15px;
  height: 13px;
  margin-right: 4px;
}

.c2 {
  height: 18px;
  margin-bottom: 2px;
  padding: 2px 2px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #7f787f;
  color: #c6c6c6;
}

.c2 img {
  width: 15px;
  height: 13px;
  margin-right: 4px;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
}

<div>
  <div
    class="c0"
  >
    <img
      height="32"
      src="test-file-stub"
      width="32"
    />
    <div
      class="c1"
    >
      test.exe
    </div>
  </div>
  <div
    class="c2"
  >
    <img
      height="32"
      src="test-file-stub"
      width="32"
    />
    <div
      class="c1"
    >
      test.exe
    </div>
  </div>
  <div
    class="c0"
  >
    <img
      height="16"
      src="test-file-stub"
      width="16"
    />
    <div
      class="c1"
    >
      UNKNOWN.EXE
    </div>
  </div>
  <div
    class="c2"
  >
    <img
      height="16"
      src="test-file-stub"
      width="16"
    />
    <div
      class="c1"
    >
      UNKNOWN.EXE
    </div>
  </div>
</div>
`;

exports[`<TitleBar /> Snapshot should match snapshot with all Options 1`] = `
.c4 {
  background-color: #c3c7cb;
  padding: 7px 20px 5px;
  border: none;
  color: #000000;
  font-size: 12px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e, 1px 1px 0 0px #000000;
}

.c4:disabled {
  color: #868a8e;
}

.c4:focus {
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -0.5px -0.5px 0px 1px #868a8e, 1px 1px 0 1px #000000;
}

.c4:active {
  padding: 8px 20px 4px;
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 0 0 0 1px #868a8e, 0 0 0 1px #000000;
}

.c2 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 2px;
}

.c3:first-child {
  margin-right: 0;
}

.c5 {
  padding: 0;
  width: 17px;
  height: 14px;
  min-width: 0;
  font-weight: 600;
  font-size: 10px;
}

.c5:active {
  padding: 1px 0 0 1px;
  outline: none;
}

.c5:focus {
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -1px -1px 0px 1px #868a8e;
}

.c0 {
  height: 18px;
  margin-bottom: 2px;
  padding: 2px 2px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #000e7a;
  color: #fefefe;
}

.c0 img {
  width: 15px;
  height: 13px;
  margin-right: 4px;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
}

<div>
  <div
    class="c0"
  >
    <img
      height="32"
      src="test-file-stub"
      width="32"
    />
    <div
      class="c1"
    >
      test.exe
    </div>
    <ul
      class="c2"
    >
      <li
        class="c3"
      >
        <button
          class="c4 c5"
        >
          ?
        </button>
      </li>
      <li
        class="c3"
      >
        <button
          class="c4 c5"
        >
          x
        </button>
      </li>
    </ul>
  </div>
</div>
`;
